# mnist_digit_recognition

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  vcpkg.json
.github/workflows/: cmake.yml
data/: README.md
libs/mnist_loader/: CMakeLists.txt
libs/mnist_loader/include/: mnist_loader.h
libs/mnist_loader/src/: mnist_loader.cc
libs/neural/: CMakeLists.txt
libs/neural/include/: common_types.h  dataset.h  layer_type.h  linear_layer-inl.h  linear_layer.h  loss.h  matrix-inl.h  matrix.h  model_serializer-inl.h  model_serializer.h  neural_layer.h  neural_network-inl.h  neural_network.h  relu_layer-inl.h  relu_layer.h  serializable.h  type_traits.h
mnist_digit_recognition/: CMakeLists.txt  mnist_digit_recognition.cpp  mnist_digit_recognition.h
scripts/: download_mnist.py
src/: CMakeLists.txt  experiment_config.h  experiments.cc  experiments.h  main.cc
tests/: CMakeLists.txt  matrix_test.cc  mnist_loader_test.cc
